<?xml version="1.0"?>
<package format="2">
  <name>lifecycle_demos</name>
  <version>0.0.1</version>
  <description>Demo C++ and python lifecycle managed nodes, as well as control of those nodes</description>

  <maintainer email="wsacul@gmamil.com">Lucas Walter</maintainer>

  <license>ASL2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>lifecycle</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslint</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>lifecycle</exec_depend>

  <export>
  </export>
</package>
