<?xml version="1.0"?>
<package>
  <name>lifecycle_rust</name>
  <version>0.1.0</version>
  <description>The lifecycle rust package</description>

  <maintainer email="wsacul@gmail.com">Lucas Walter</maintainer>

  <license>ASL2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>lifecycle_msgs</build_depend>
  <build_depend>roslint</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>lifecycle_msgs</run_depend>

</package>
